--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
     "deploy": "wrangler deploy --minify"
   },
   "dependencies": {
-    "hono": "^4.6.14"
+    "hono": "^4.6.14",
+    "prisma": "^6.1.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20241218.0",
